fixed z-index on login component

--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -9,10 +9,14 @@ body {
   
 }
 
+a{
+  // text-decoration: none;
+
+}
+
 
 .home-container{
   display: flex;
- 
 }
 
 .hide-header{
