--- a/src/css/components/login.scss
+++ b/src/css/components/login.scss
@@ -1,7 +1,7 @@
 .login-parent{
   display: flex;
   justify-content: center;
-  z-index: 2;
+  z-index: 1;
 }
   
   .login-container {
